test/parser/Queries/syntax_errors/fail_K-ForExprWithout-39.xq
(:******** $ ********************************* where  $ ********* eq *:)
(: Test: K-ForExprWithout-39        for                    for  :)(: by: for  Frans Englich  let       eq   ne            for       ne      :)
(: Date:            $              for  :)
(: Purpose: Variable whichfoo is  for not in scope.       $   eq        :)
( let :******* ne ******* for *****foo********************************:)
for $foo in $foo return 1